--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/google-spreadsheet": "^3.3.0",
+    "dotenv": "^16.0.3",
     "google-spreadsheet": "^3.3.0",
     "puppeteer": "^19.5.2"
   }
