--- a/.env_sample
+++ b/.env_sample
@@ -1,2 +1,3 @@
-GOOGLE_SERVICE_ACCOUNT_EMAIL="your google client email"
-GOOGLE_PRIVATE_KEY="your google private key"
+GOOGLE_SERVICE_ACCOUNT_EMAIL="your email"
+GOOGLE_PRIVATE_KEY="your key"
+GOOGLE_SHEET_ID="<your id>"
